--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -12,7 +12,7 @@ IF(MSVC)
 ENDIF(MSVC)
 
 ADD_INTERFACE_INCLUDEDIR()
-ADD_SDLIB_INCLUDEDIR(tgf tgfclient tgfdata math portability)
+ADD_SDLIB_INCLUDEDIR(tgf tgfclient tgfdata portability)
 
 IF(OPTION_SDL2)
 	ADD_SDL2_INCLUDEDIR()
