--- a/src/modules/racing/standardgame/CMakeLists.txt
+++ b/src/modules/racing/standardgame/CMakeLists.txt
@@ -27,9 +27,9 @@ ENDIF(OPTION_CLIENT_SERVER)
 ADD_INTERFACE_INCLUDEDIR()
 
 IF(OPTION_WEBSERVER)
-	ADD_SDLIB_INCLUDEDIR(math portability robottools tgf tgfdata ${NETWORKING_INC} tgfclient)
+        ADD_SDLIB_INCLUDEDIR(portability robottools tgf tgfdata ${NETWORKING_INC} tgfclient)
 ELSE(OPTION_WEBSERVER)
-	ADD_SDLIB_INCLUDEDIR(math portability robottools tgf tgfdata ${NETWORKING_INC})
+        ADD_SDLIB_INCLUDEDIR(portability robottools tgf tgfdata ${NETWORKING_INC})
 ENDIF(OPTION_WEBSERVER)
 
 ADD_PLIB_INCLUDEDIR()
