--- a/src/modules/networking/CMakeLists.txt
+++ b/src/modules/networking/CMakeLists.txt
@@ -25,7 +25,7 @@ ELSE(OPTION_SDL2)
 	ADD_SDL_INCLUDEDIR()
 ENDIF(OPTION_SDL2)
 
-ADD_SDLIB_INCLUDEDIR(networking portability tgf math)
+ADD_SDLIB_INCLUDEDIR(networking portability tgf)
 
 ADD_PLIB_INCLUDEDIR()
 ADD_ENET_INCLUDEDIR()
