--- a/src/libs/CMakeLists.txt
+++ b/src/libs/CMakeLists.txt
@@ -5,6 +5,7 @@ IF(NOT OPTION_3RDPARTY_EXPAT)
 ENDIF(NOT OPTION_3RDPARTY_EXPAT)
 
 ADD_SUBDIRECTORY(tgf)
+#ADD_SUBDIRECTORY(ssg)
 ADD_SUBDIRECTORY(tgfclient)
 ADD_SUBDIRECTORY(tgfdata)
 ADD_SUBDIRECTORY(robottools)
